# MultiStack

./: CMakeLists.txt
MultiStack/: CMakeLists.txt  MultiStack_main.cpp
MultiStackLib/: CMakeLists.txt  MultiStack.h  NewStack.h
MultiStackTest/: CMakeLists.txt  MultiStackTest.cpp
StackLib/: Stack.h
